--- a/index.html
+++ b/index.html
@@ -4,3 +4,7 @@
 <img src="https://s4.gifyu.com/images/MXEs.gif" alt="MXEs.gif" border="0" />
 
 <blockquote class="twitter-tweet" data-dnt="true"><p lang="en" dir="ltr">Me in work rn <a href="https://t.co/8ebVxJh0A3">pic.twitter.com/8ebVxJh0A3</a></p>&mdash; jason rouse (@sionrouse) <a href="https://twitter.com/sionrouse/status/1237713194640183297?ref_src=twsrc%5Etfw">March 11, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<iframe width="300" height="250" src="https://vclock.com/embed/#time=20:00&title=NHS+CLAPPY&theme=0&ampm=1&showdate=1&sound=bells" frameborder="0" allowfullscreen=0></iframe>
+
+<a href="https://www.paypal.com/gb/fundraiser/charity/3197205"></a>
