--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
 
 <iframe width="300" height="250" src="https://vclock.com/embed/#time=20:00&title=NHS+CLAPPY&theme=0&ampm=1&showdate=1&sound=bells" frameborder="0" allowfullscreen=0></iframe>
 
-<a href="https://www.paypal.com/gb/fundraiser/charity/3197205">
+<a href="https://www.paypal.com/gb/fundraiser/charity/3197205">https://www.paypal.com/gb/fundraiser/charity/3197205</a>
