--- a/index.html
+++ b/index.html
@@ -8,3 +8,6 @@
 <iframe width="300" height="250" src="https://vclock.com/embed/#time=20:00&title=NHS+CLAPPY&theme=0&ampm=1&showdate=1&sound=bells" frameborder="0" allowfullscreen=0></iframe>
 
 <a href="https://www.paypal.com/gb/fundraiser/charity/3197205">https://www.paypal.com/gb/fundraiser/charity/3197205</a>
+
+
+<iframe width="600" height="700" src="https://rss.app/embed/v1/CHQNBBtsFtlF1iMF" frameBorder="0"></iframe>
