--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <p><span style='caret-color: rgb(36, 41, 46); color: rgb(36, 41, 46); font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, monospace; font-size: 12px; white-space: pre; background-color: rgb(255, 255, 255);'>INSTALLATION FOR TWO DEVICES DURING QUARANTINE: DEVICE ONE.</span></p>
 
-<iframe width="720" height="480" src="https://www.youtube-nocookie.com/embed/Xxlx5GeFjjk?controls=0" frameborder="0" allow="accelerometer; autoplay=1; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="720" height="480" src="https://www.youtube-nocookie.com/embed/Xxlx5GeFjjk?controls=0" frameborder="0" allow="accelerometer; autoplay=1; encrypted-media;"></iframe>
 <img src="https://s4.gifyu.com/images/MXEs.gif" alt="MXEs.gif" border="0" />
 
 <blockquote class="twitter-tweet" data-dnt="true"><p lang="en" dir="ltr">Me in work rn <a href="https://t.co/8ebVxJh0A3">pic.twitter.com/8ebVxJh0A3</a></p>&mdash; jason rouse (@sionrouse) <a href="https://twitter.com/sionrouse/status/1237713194640183297?ref_src=twsrc%5Etfw">March 11, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
